--- a/.github/workflows/plugin-tests.yaml
+++ b/.github/workflows/plugin-tests.yaml
@@ -78,6 +78,7 @@ jobs:
           - kratosv2
           - microv4
           - mongo
+          - mysql
           - plugin_exclusion
     steps:
       - uses: actions/checkout@v2
