--- a/test/plugins/scenarios/mysql/plugin.yml
+++ b/test/plugins/scenarios/mysql/plugin.yml
@@ -17,31 +17,38 @@
 entry-service: http://${HTTP_HOST}:${HTTP_PORT}/execute
 health-checker: http://${HTTP_HOST}:${HTTP_PORT}/health
 start-script: ./bin/startup.sh
-framework: go.mongodb.org/mongo-driver
+framework: github.com/go-sql-driver/mysql
 export-port: 8080
 support-version:
+  - go: 1.17
+    framework:
+      - v1.7.1
   - go: 1.18
     framework:
-      - v1.10.5
-      - v1.11.1
-      - v1.10.6
-      - v1.11.2
-      - v1.11.3
-      - v1.11.4
-      - v1.11.6
-      - v1.11.7
+      - v1.4.0
+      - v1.4.1
+      - v1.5.0
+      - v1.6.0
+      - v1.7.1
+  - go: 1.19
+    framework:
+      - v1.7.1
+  - go: 1.20
+    framework:
+      - v1.7.1
 dependencies:
-  mongo:
-    image: mongo
-    hostname: mongo
+  mysql:
+    image: mysql:5.7
+    hostname: mysql-server
     expose:
-      - "27017"
+      - "3306"
     environment:
-      MONGO_INITDB_ROOT_USERNAME: user
-      MONGO_INITDB_ROOT_PASSWORD: password
-      MONGO_INITDB_DATABASE: database
+      MYSQL_ROOT_PASSWORD: "password"
+      MYSQL_USER: "user"
+      MYSQL_PASSWORD: "password"
+      MYSQL_DATABASE: "database"
     healthcheck:
-      test: [ "CMD", "bash", "-c", "cat < /dev/null > /dev/tcp/127.0.0.1/27017" ]
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
       interval: 5s
       timeout: 60s
       retries: 120
