Support metrics report API for agent and implement runtime metrics report

--- a/.github/workflows/plugin-tests.yaml
+++ b/.github/workflows/plugin-tests.yaml
@@ -79,6 +79,7 @@ jobs:
           - microv4
           - mongo
           - plugin_exclusion
+          - runtime_metrics
     steps:
       - uses: actions/checkout@v2
         with:
