Support metrics report API for plugin and implement runtime metrics report (#66)

--- a/.github/workflows/plugin-tests.yaml
+++ b/.github/workflows/plugin-tests.yaml
@@ -80,6 +80,7 @@ jobs:
           - mongo
           - mysql
           - plugin_exclusion
+          - runtime_metrics
     steps:
       - uses: actions/checkout@v2
         with:
