--- a/.github/workflows/plugin-tests.yaml
+++ b/.github/workflows/plugin-tests.yaml
@@ -79,6 +79,8 @@ jobs:
           - microv4
           - mongo
           - mysql
+          - zap
+          - logrus
           - plugin_exclusion
           - runtime_metrics
     steps:
