--- a/.github/workflows/plugin-tests.yaml
+++ b/.github/workflows/plugin-tests.yaml
@@ -81,6 +81,7 @@ jobs:
           - mysql
           - zap
           - logrus
+          - mutex
           - plugin_exclusion
           - runtime_metrics
     steps:
