--- a/test/plugins/scenarios/mutex/plugin.yml
+++ b/test/plugins/scenarios/mutex/plugin.yml
@@ -1,5 +1,3 @@
-#!/bin/bash
-#
 # Licensed to the Apache Software Foundation (ASF) under one
 # or more contributor license agreements.  See the NOTICE file
 # distributed with this work for additional information
@@ -16,9 +14,13 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-home="$(cd "$(dirname $0)"; pwd)"
-export SW_AGENT_PLUGIN_EXCLUDES=http,mutex
-
-go build ${GO_BUILD_OPTS} -o gin
-
-./gin
+entry-service: http://${HTTP_HOST}:${HTTP_PORT}/consumer
+health-checker: http://${HTTP_HOST}:${HTTP_PORT}/health
+start-script: ./bin/startup.sh
+framework: go
+export-port: 8080
+support-version:
+  - go: 1.17
+  - go: 1.18
+  - go: 1.19
+  - go: 1.20
