--- a/.github/workflows/plugin-tests.yaml
+++ b/.github/workflows/plugin-tests.yaml
@@ -83,6 +83,7 @@ jobs:
           - logrus
           - plugin_exclusion
           - runtime_metrics
+          - mux
     steps:
       - uses: actions/checkout@v2
         with:
