--- a/.github/workflows/plugin-tests.yaml
+++ b/.github/workflows/plugin-tests.yaml
@@ -84,6 +84,7 @@ jobs:
           - plugin_exclusion
           - runtime_metrics
           - mux
+          - grpc
     steps:
       - uses: actions/checkout@v2
         with:
