--- a/test/plugins/scenarios/grpc/config/excepted.yml
+++ b/test/plugins/scenarios/grpc/config/excepted.yml
@@ -15,68 +15,43 @@
 # limitations under the License.
 
 segmentItems:
-  - serviceName: kratosv2
-    segmentSize: ge 3
+  - serviceName: grpc-client
+    segmentSize: 2
     segments:
       - segmentId: not null
         spans:
-          - operationName: /helloworld.Greeter/SayHello
+          - operationName: GET:/health
             parentSpanId: -1
             spanId: 0
             spanLayer: Http
             startTime: nq 0
             endTime: nq 0
-            componentId: 5017
+            componentId: 5004
             isError: false
             spanType: Entry
             peer: ''
             skipAnalysis: false
             tags:
-              - { key: http.method, value: GET }
-              - { key: url, value: 'localhost:8000/helloworld/test' }
+              - {key: http.method, value: GET}
+              - {key: url, value: 'service:8080/health'}
               - {key: status_code, value: '200'}
-            refs:
-              - {parentEndpoint: 'GET:/consumer', networkAddress: 'localhost:8000', refType: CrossProcess,
-                 parentSpanId: 1, parentTraceSegmentId: not null, parentServiceInstance: not null,
-                 parentService: kratosv2, traceId: not null}
       - segmentId: not null
         spans:
-          - operationName: /helloworld.Greeter/SayHello
-            parentSpanId: -1
-            spanId: 0
+          - operationName: api.Echo.UnaryEcho/Client/Request/SendMsg
+            parentSpanId: 1
+            spanId: 2
             spanLayer: RPCFramework
             startTime: nq 0
             endTime: nq 0
             componentId: 23
             isError: false
-            spanType: Entry
+            spanType: Local
             peer: ''
             skipAnalysis: false
             tags:
               - {key: url, value: not null}
-              - {key: RPCType, value: not null}
-            refs:
-              - {parentEndpoint: 'GET:/consumer', networkAddress: 'localhost:9000', refType: CrossProcess,
-                 parentSpanId: 2, parentTraceSegmentId: not null, parentServiceInstance: not null,
-                 parentService: kratosv2, traceId: not null}
-      - segmentId: not null
-        spans:
-          - operationName: /helloworld/test
-            parentSpanId: 0
-            spanId: 1
-            spanLayer: RPCFramework
-            startTime: nq 0
-            endTime: nq 0
-            componentId: 5010
-            isError: false
-            spanType: Exit
-            peer: localhost:8000
-            skipAnalysis: false
-            tags:
-              - { key: transport, value: HTTP }
-              - { key: status_code, value: '200' }
-          - operationName:  helloworld.Greeter.SayHello/Client/Request/SendMsg
-            parentSpanId: 2
+          - operationName: api.Echo.UnaryEcho/Client/Response/RecvMsg
+            parentSpanId: 1
             spanId: 3
             spanLayer: RPCFramework
             startTime: nq 0
@@ -87,30 +62,17 @@ segmentItems:
             peer: ''
             skipAnalysis: false
             tags:
-              - { key: url, value: not null }
-          - operationName:  helloworld.Greeter.SayHello/Client/Response/RecvMsg
-            parentSpanId: 2
-            spanId: 4
-            spanLayer: RPCFramework
-            startTime: nq 0
-            endTime: nq 0
-            componentId: 23
-            isError: false
-            spanType: Local
-            peer: ''
-            skipAnalysis: false
-            tags:
-              - { key: url, value: not null }
-          - operationName: helloworld.Greeter.SayHello
+              - {key: url, value: not null}
+          - operationName: api.Echo.UnaryEcho
             parentSpanId: 0
-            spanId: 2
+            spanId: 1
             spanLayer: RPCFramework
             startTime: nq 0
             endTime: nq 0
             componentId: 23
             isError: false
             spanType: Exit
-            peer: localhost:9000
+            peer: 127.0.0.1:9999
             skipAnalysis: false
             tags:
               - {key: url, value: not null}
@@ -130,5 +92,42 @@ segmentItems:
               - {key: http.method, value: GET}
               - {key: url, value: 'service:8080/consumer'}
               - {key: status_code, value: '200'}
+  - serviceName: grpc-server
+    segmentSize: 1
+    segments:
+      - segmentId: not null
+        spans:
+          - operationName: api.Echo.UnaryEcho/Server/Response/SendResponse
+            parentSpanId: 0
+            spanId: 1
+            spanLayer: RPCFramework
+            startTime: nq 0
+            endTime: nq 0
+            componentId: 23
+            isError: false
+            spanType: Local
+            peer: ''
+            skipAnalysis: false
+            tags:
+              - {key: url, value: not null}
+          - operationName: api.Echo.UnaryEcho
+            parentSpanId: -1
+            spanId: 0
+            spanLayer: RPCFramework
+            startTime: nq 0
+            endTime: nq 0
+            componentId: 23
+            isError: false
+            spanType: Entry
+            peer: ''
+            skipAnalysis: false
+            tags:
+              - {key: url, value: not null}
+              - {key: RPCType, value: not null}
+            refs:
+              - {parentEndpoint: 'GET:/consumer', networkAddress: '127.0.0.1:9999', refType: CrossProcess,
+                 parentSpanId: 1, parentTraceSegmentId: not null,
+                 parentServiceInstance: not null, parentService: grpc-client,
+                 traceId: not null}
 meterItems: []
 logItems: []
