--- a/test/plugins/scenarios/go-redisv9/plugin.yml
+++ b/test/plugins/scenarios/go-redisv9/plugin.yml
@@ -23,18 +23,36 @@ support-version:
   - go: 1.17
     framework:
       - v9.0.3
-  - go: 1.18
-    framework:
-      - v9.0.4
-      - v9.0.5
+#  - go: 1.18
+#    framework:
+#      - v9.0.4
+#      - v9.0.5
 dependencies:
-  redis-server:
+  redis-single-server:
     image: redis:6.2
     hostname: redis-server
-    expose:
-      - "6379"
+    ports:
+      - '6379:6379'
+    networks:
+      - redis-net
     healthcheck:
       test: ["CMD", "redis-cli", "-h", "localhost", "ping"]
+      interval: 5s
+      timeout: 60s
+      retries: 120
+  redis-cluster-server:
+    image: docker.io/bitnami/redis-cluster:7.0
+    hostname: redis-server
+    environment:
+      ALLOW_EMPTY_PASSWORD: yes
+      REDIS_CLUSTER_REPLICAS: 0
+      REDIS_CLUSTER_CREATOR: yes
+      REDIS_NODES: redis-cluster-server redis-cluster-server redis-cluster-server
+      REDIS_PORT_NUMBER: 7001
+    ports:
+      - '7001:7001'
+    healthcheck:
+      test: [ "CMD", "redis-cli", "-c", "-p", "7001", "ping" ]
       interval: 5s
       timeout: 60s
       retries: 120
